fixed z-index for submit form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,4 +39,6 @@ img:hover {
     -webkit-transform-origin-x: left;
     transform: scale(1.5);
     transform-origin: left;
+    position: relative;
+    z-index: 10;
 }
